--- a/.learn/resets/08-adding-styles/index.html
+++ b/.learn/resets/08-adding-styles/index.html
@@ -1,12 +1,14 @@
 <!DOCTYPE html>
-
+<style class="css"></style>
+body{ background: black; }
 <html lang="en">
 	<head>
 		<meta charset="UTF-8" />
 		<meta name="viewport" content="width=device-width, initial-scale=1.0" />
-		title.css
+		<title>proyecto de jasmin</title>
 	</head>
 	body{
     background: black;
 }
+
 </html>
